force-app/main/default/objects/Sales_Area__c/Sales_Area__c.object-meta.xml
<CustomObject>
    <label>Sales Area</label>
    <nameField>
        <displayFormat>DSA-{0000}</displayFormat>
        <label>Sales Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>