force-app/main/default/objects/Sales_Area__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Areas</relationshipLabel>
    <relationshipName>Sales_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>