force-app/main/default/objects/Sales_Area__c/fields/Account_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Active__c</fullName>
    <formula>IF(Account_Owner__r.IsActive,True,False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Active</label>
    <type>Checkbox</type>
</CustomField>