force-app/main/default/objects/Sales_Area__c/fields/Combination_Key__c.field-meta.xml
<CustomField>
    <fullName>Combination_Key__c</fullName>
    <formula>Distributor__r.SAP_Code__c  &amp; &apos;-&apos;&amp; Sales_Org__r.Sales_Org_Code__c &amp; &apos;-&apos; &amp; Distribution_Channel__r.Distribution_Channel_Code__c  &amp; &apos;-&apos; &amp; Division__r.Division_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combination Key</label>
    <type>Text</type>
</CustomField>