force-app/main/default/objects/Sales_Area__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Channel</label>
    <referenceTo>Distribution_Channel__c</referenceTo>
    <relationshipLabel>Sales Areas</relationshipLabel>
    <relationshipName>Sales_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>