force-app/main/default/objects/Sales_Area__c/fields/Distribution_Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_Code__c</fullName>
    <formula>Distribution_Channel__r.Distribution_Channel_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Channel Code</label>
    <type>Text</type>
</CustomField>