force-app/main/default/objects/Sales_Area__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Sales Areas</relationshipLabel>
    <relationshipName>Sales_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>