force-app/main/default/objects/Sales_Area__c/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <formula>Division__r.Division_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division Code</label>
    <type>Text</type>
</CustomField>