force-app/main/default/objects/Sales_Area__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org</label>
    <referenceTo>Sales_Org__c</referenceTo>
    <relationshipLabel>Sales Areas</relationshipLabel>
    <relationshipName>Sales_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>