force-app/main/default/objects/Sales_Area__c/fields/Sales_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Code__c</fullName>
    <formula>Sales_Org__r.Sales_Org_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org Code</label>
    <type>Text</type>
</CustomField>